# Lab_2

./: CMakeLists.txt  IATHOME.pnm  Test.pnm  afterfilter.txt  beforeuncompress.txt  i.pnm  main.c  mav.pnm  twolibs.txt
